...
    return Scaffold(
      appBar: AppBar(
        title: const Text('Registry'),
      ),
      floatingActionButton: isOwner
          ? FloatingActionButton(
              key: const Key('add_registry_item_fab'),
              heroTag: null,
              onPressed: _onAddItemTap,
              child: const Icon(Icons.add),
            )
          : null,
      body: TileListView(
...
